# barnacles

./: .gitignore  Gemfile  README.md  unicorn.rb
app/controllers/: stories_controller.rb
app/helpers/: application_helper.rb
app/models/: comment.rb  moderation.rb  stories_paginator.rb  user.rb  vote.rb
app/views/: _nav.html.erb
config/: application.rb  database.yml  newrelic.yml  puma.rb  routes.rb
config/environments/: production.rb
db/: schema.rb
etc/: barnacles-backup.service  barnacles-backup.timer  barnacles.service  index.sh
extras/: markdowner.rb
ng/: API.hs  DB.hs  Main.hs  Models.hs  Server.hs  barnacles.cabal  package.yaml
ng/browser/: .gitignore  bower.json  index.html
ng/browser/bower_components/purescript-control/: .bower.json
ng/browser/bower_components/purescript-dom/: .bower.json
ng/browser/bower_components/purescript-eff/: .bower.json
ng/browser/bower_components/purescript-either/: .bower.json
ng/browser/bower_components/purescript-maybe/: .bower.json
ng/browser/bower_components/purescript-monoid/: .bower.json
ng/browser/bower_components/purescript-prelude/: .bower.json
ng/browser/bower_components/purescript-react/: .bower.json
ng/browser/bower_components/purescript-st/: .bower.json
ng/browser/bower_components/purescript-strings/: .bower.json
ng/browser/bower_components/purescript-thermite/: .bower.json
ng/browser/bower_components/purescript-unfoldable/: .bower.json
ng/browser/src/: Main.purs
ng/css/: typography.css
ng/src/: API.hs  DB.hs  Main.hs  Models.hs  P.hs  Server.hs  Utils.hs
script/: puma.sh
(+38 files in other folders)
