name:                barnacles
version:             1.0
synopsis:            A server for winners
license:             MIT
license-file:        LICENSE
author:              Hao Lian
maintainer:          hi@haolian.org
build-type:          Simple
cabal-version:       >=1.10

executable barnacles
  main-is:             Main.hs
  build-depends:       aeson
                     , base >=4.8 && <4.9
                     , base-prelude
                     , bytestring >= 0.10.4.0
                     , containers >= 0.5.5.1
                     , http-types >= 0.8.6
                     , lens
                     , lucid >= 2.5 && <2.6
                     , mysql >= 0.1.1.7
                     , mysql-simple
                     , text >= 1.1.1.3
                     , wai >= 3.0.2.3
                     , warp >= 3.0.12.1
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
